# prost-reflect-serde-bug

./: Cargo.toml  build.rs
src/: items.proto  lib.rs
