[package]
name = "prost-reflect-serde-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
prost-reflect = { version = "0.12", features = ["derive", "serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.12"
prost-reflect = { version = "0.12", features = ["derive", "serde"] }
